force-app/main/default/objects/SCOC__TradelineList__c/SCOC__TradelineList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Tradeline List</description>
    <label>Tradeline</label>
    <nameField>
        <displayFormat>TRADE-{00000}</displayFormat>
        <label>Tradeline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tradelines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>