force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__Amount1Qualifier__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Amount1Qualifier__c</fullName>
    <description>Tradeline Amount 1 Qualifier</description>
    <label>Amount 1 Qualifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>