force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__Amount2__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Amount2__c</fullName>
    <description>Tradeline amount 2</description>
    <label>Amount 2</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>