force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__Amount2Qualifier__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Amount2Qualifier__c</fullName>
    <description>Tradeline Amount 2 Qualifier</description>
    <label>Amount 2 Qualifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>