force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__Amount3__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Amount3__c</fullName>
    <description>Amount3</description>
    <label>Amount3</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>