force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__Balance__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Balance__c</fullName>
    <description>Tradeline balance</description>
    <label>Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>