force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__BalanceDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__BalanceDate__c</fullName>
    <description>Tradeline balance date</description>
    <label>Balance Date</label>
    <type>Date</type>
</CustomField>