force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__ClientNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ClientNumber__c</fullName>
    <description>Client Number</description>
    <label>Client Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>