force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ClosedDate__c</fullName>
    <description>The system populates this optional date field to display the Tradeline closed date.</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>