force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__CompanyClassCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CompanyClassCode__c</fullName>
    <description>Company Class Code</description>
    <label>Company Class Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>