force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__ConsumerComment__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ConsumerComment__c</fullName>
    <description>Tradeline comment</description>
    <label>Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>