force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__CurrentBalance__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CurrentBalance__c</fullName>
    <description>Current Balance</description>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>