force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CurrentStatus__c</fullName>
    <description>Tradeline current status</description>
    <label>Current Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>