force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__DateOpened__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DateOpened__c</fullName>
    <description>Tradeline date opened</description>
    <label>-D Date Opened</label>
    <length>4</length>
    <type>Text</type>
</CustomField>