force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__DefaultBalance__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DefaultBalance__c</fullName>
    <description>Default Balance</description>
    <label>Default Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>