force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__EnhancedAccountConditionCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__EnhancedAccountConditionCode__c</fullName>
    <description>Tradeline enhanced account condition code.</description>
    <label>Enhanced Account Condition Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>