force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__EnhancedInitialPaymentLevelDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__EnhancedInitialPaymentLevelDate__c</fullName>
    <description>Tradeline enhanced initial payment level date.</description>
    <label>Enhanced Initial Payment Level Date</label>
    <type>Date</type>
</CustomField>