force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__EnhancedPaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>SCOC__EnhancedPaymentStatus__c</fullName>
    <description>Tradeline enhanced payment status</description>
    <label>Enhanced Payment Status</label>
    <length>5</length>
    <type>Text</type>
</CustomField>