force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__Evaluation__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Evaluation__c</fullName>
    <description>Tradeline evaluation status</description>
    <label>Evaluation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>