force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__FirstDelinquencyDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__FirstDelinquencyDate__c</fullName>
    <description>First Delinquency Date</description>
    <label>First Delinquency Date</label>
    <type>Date</type>
</CustomField>