force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__FixedPaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>SCOC__FixedPaymentTerms__c</fullName>
    <description>Fixed Payment Terms</description>
    <label>Fixed Payment Terms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>