force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__FixedPaymentTermsAmount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__FixedPaymentTermsAmount__c</fullName>
    <description>Fixed Payment Terms Amount</description>
    <label>Fixed Payment Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>