force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__FixedPaymentTermsNumberOfPayments__c.field-meta.xml
<CustomField>
    <fullName>SCOC__FixedPaymentTermsNumberOfPayments__c</fullName>
    <description>Number of fixed payments</description>
    <label>Number of Fixed Payments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>