force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__LastPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LastPaymentDate__c</fullName>
    <description>The system automatically populates this optional date field to indicate the Last Payment Date from the vendor response. By default, it is blank.</description>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>