force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__LastUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LastUpdateDate__c</fullName>
    <description>Last Update Date</description>
    <label>Last Update Date</label>
    <type>Date</type>
</CustomField>