force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__NameOrAlias__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NameOrAlias__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name Or Alias Lookup</description>
    <label>Name Or Alias Lookup</label>
    <referenceTo>SCOC__NameOrAliasList__c</referenceTo>
    <relationshipLabel>Related Name Or Alias</relationshipLabel>
    <relationshipName>TradelineList</relationshipName>
    <type>Lookup</type>
</CustomField>