force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__NarrativeCode_1__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NarrativeCode_1__c</fullName>
    <description>NarrativeCode_1</description>
    <label>Narrative Code 1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>