force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__NarrativeCode_2__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NarrativeCode_2__c</fullName>
    <description>Narrative Code 2</description>
    <label>Narrative Code 2</label>
    <length>3</length>
    <type>Text</type>
</CustomField>