force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__NarrativeCodeText_1__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NarrativeCodeText_1__c</fullName>
    <description>NarrativeCodeText_1</description>
    <label>Narrative Code Text 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>