force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__NarrativeCodeText_2__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NarrativeCodeText_2__c</fullName>
    <description>NarrativeCodeText_2</description>
    <label>Narrative Code Text 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>