force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__NinetyOrMoreDayCounter__c.field-meta.xml
<CustomField>
    <fullName>SCOC__NinetyOrMoreDayCounter__c</fullName>
    <description>Number of times tradeline was paid 90 days late or more.</description>
    <label>Ninety or More Days Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>