force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__OpenClosedIndicator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OpenClosedIndicator__c</fullName>
    <description>Indicates whether tradeline is open or closed.</description>
    <label>Open or Closed Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>