force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__OpenedDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__OpenedDate__c</fullName>
    <description>Tradeline date opened</description>
    <label>Opened Date</label>
    <type>Date</type>
</CustomField>