force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__PastDueAmount__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PastDueAmount__c</fullName>
    <description>The system automatically populates this optional number field to indicate the Past Due Amount from the vendor response. By default, it is blank.</description>
    <label>Past Due Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>