force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__PaymentPattern__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PaymentPattern__c</fullName>
    <description>Tradeline payment pattern.</description>
    <label>Payment Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>