force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__QualityIndicator1__c.field-meta.xml
<CustomField>
    <fullName>SCOC__QualityIndicator1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quality Indicator 1</description>
    <inlineHelpText>Quality Indicator 1</inlineHelpText>
    <label>Quality Indicator 1</label>
    <type>Checkbox</type>
</CustomField>