force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__QualityIndicator2__c.field-meta.xml
<CustomField>
    <fullName>SCOC__QualityIndicator2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quality Indicator 2</description>
    <inlineHelpText>Quality Indicator 2</inlineHelpText>
    <label>Quality Indicator 2</label>
    <type>Checkbox</type>
</CustomField>