force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__StartBalanceSuppressed__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StartBalanceSuppressed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Start Balance Suppressed</description>
    <inlineHelpText>Start BalanceSuppressed</inlineHelpText>
    <label>Start Balance Suppressed</label>
    <type>Checkbox</type>
</CustomField>