force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__StatusChangeDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StatusChangeDate__c</fullName>
    <description>Tradeline status change date</description>
    <label>Status Change Date</label>
    <type>Date</type>
</CustomField>