force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__StatusCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StatusCode__c</fullName>
    <description>StatusCode</description>
    <label>StatusCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>