force-app/main/default/objects/SCOC__TradelineList__c/fields/SCOC__Times30DaysLate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Times30DaysLate__c</fullName>
    <description>Number of times tradeline was paid 30 days late.</description>
    <label>Times 30 Days Late</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>